# tornado_postgres

./: .env  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml
crud/: database.py  models.py
nginx/: nginx-setup.conf
routers/: views.py
tests/: tests.py
